[package]
name = "pulsora"
version = "0.1.0"
edition = "2021"
description = "High-performance time series database optimized for market data"
authors = ["Pulsora Team"]

[[bin]]
name = "pulsora"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Web Framework (Tokio ecosystem)
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Storage
rocksdb = "0.22"

# Streaming & Memory Management
csv = "1.3"
tokio-stream = "0.1"
futures = "0.3"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"