[package]
name = "pulsora"
version = "0.1.0"
edition = "2021"
description = "High-performance time series database optimized for market data"
authors = ["Pulsora Team"]

[[bin]]
name = "pulsora"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Web Framework (Tokio ecosystem)
axum = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }

# Storage
rocksdb = "0.24.0"

# Streaming & Memory Management
csv = "1.3"
tokio-stream = "0.1"
futures = "0.3"
bytes = "1.10"

# Performance Optimizations
rayon = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast number formatting
itoa = "1.0"
ryu = "1.0"

# Configuration
config = "0.15.14"
toml = "0.9.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["v4"] }
atty = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.21"

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "optimizations"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []
