[package]
name = "pulsora"
version = "0.1.0"
edition = "2021"
description = "High-performance time series database optimized for market data"
authors = ["Muvon Un Limited <contact@muvon.io>"]

[[bin]]
name = "pulsora"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive"] }

# Web Framework (Tokio ecosystem)
axum = "0.8.9"
tokio = { version = "1.52", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["fs", "trace", "cors"] }

# Storage
rocksdb = "0.24.0"

# Streaming & Memory Management
csv = "1.4"
tokio-stream = "0.1"
futures = "0.3"
bytes = "1.11"

# Performance Optimizations
rayon = "1.12"

arrow = "58.3"
prost = "0.14"
prost-types = "0.14"
tikv-jemallocator = "0.6"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast number formatting
itoa = "1.0"
ryu = "1.0"

# Configuration
config = "0.15.23"
toml = "1.1.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.23", features = ["v4"] }
atty = "0.2"
wide = "1.4.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.27"

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "optimizations"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[features]
default = []
